2009-09-29  Dirk Schulze  <krit@webkit.org>

Reviewed by Nikolas Zimmermann.

        SVG Filter feComposite implementation is missing
        [https://bugs.webkit.org/show_bug.cgi?id=28362]

        feComposite implementation for SVG.

        Test: svg/filters/feComposite.svg

        * platform/graphics/filters/FEComposite.cpp:
        (WebCore::arithmetic):
        (WebCore::FEComposite::apply):

        Tests the feComposite implementation for SVG.

        * platform/mac/svg/filters/feComposite-expected.checksum: Added.
        * platform/mac/svg/filters/feComposite-expected.png: Added.
        * platform/mac/svg/filters/feComposite-expected.txt: Added.
        * svg/filters/feComposite.svg: Added.


Canonical link: https://commits.webkit.org/40456@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48896 268f45cc-cd09-0410-ab3c-d52691b4dbfc